[package]
name = "raytracingoneweek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
env_logger = "0.10.1"
glam = "0.24.2"
indicatif = "0.17.7"
log = "0.4.20"
rand = "0.8.5"
tokio = { version= "1.35.1", features = ["full"] }
